# chat-pgp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  message.rs  pgp.rs  relay.rs  secret.rs  server.rs  terminal.rs  test.rs  test_tokio.rs  test_tokio2.rs  util.rs
src/session/: mod.rs
src/session/crypto/: mod.rs
src/session/inbox/: mod.rs
src/session/memory/: mod.rs
src/session/messages/: mod.rs
src/session/middleware/: mod.rs
src/session/protocol/: mod.rs
webui/src/: App.svelte
zenoh/: config.json5
